--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.io/Dee-Tech-u/Sparkle-Cleaning", 
+  "homepage": "https://github.io/Dee-Tech-u/Sparkle-Cleaning",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@remixicon/react": "^4.6.0",
     "@tailwindcss/vite": "^4.1.13",
     "aos": "^2.3.4",
